--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 ---
-layout: default
-title: 404
+layout:                                 error
+title:                                  404
 image:
-permalink: /404.html
+permalink:                              /404.html
 ---
-<div class="container">
+
+<div class="container mt-10 mb-10">
   <div class="row">
     <div class="col col-12" style="text-align: center; padding-bottom: 50px">
       <h1>{{page.title}}</h1>
@@ -14,5 +15,3 @@ permalink: /404.html
     </div>
   </div>
 </div>
-
-{% include templates/instagram.html %}
