--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@ description: >
 {% endif %}
 
 <!-- Scroll up button -->
-<a href="" class="scrollup" aria-label="Scroll Up">
+<a href="{{site.baseurl | absolute_url}}" class="scrollup" aria-label="Scroll Up">
   <img src="/assets/images/up.svg" alt="scroll-up">
 </a>
