Latest files of version 2023.0.0

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description: >
 
 {% if site.layout_home_page == true %}
 
-<!-- featured posts -->
+<!-- Featured posts -->
 {% if site.featured-post-slider == true %}
 
 <section id="featured-posts" class="section-sm">
@@ -63,9 +63,9 @@ description: >
   </div>
 </section>
 {% endif %}
-<!-- /featured posts -->
+<!-- /Featured posts -->
 
-<!-- all posts -->
+<!-- All posts -->
 <section id="all-posts" class="section-sm mt-5">
   <div class="container">
     <div class="row">
@@ -103,13 +103,13 @@ description: >
     {% include templates/pagination.html %}
   </div>
 </section>
-<!-- /all posts -->
+<!-- /All posts -->
 
 {% include templates/instagram.html %}
 
 {% else %}
 
-<!-- dividers -->
+<!-- Dividers -->
 <div class="dividers">
   <div class="divider"></div>
   <div class="divider"></div>
@@ -120,7 +120,7 @@ description: >
 <!-- Master header -->
 {% include templates/masthead.html %}
 
-<!-- blog post -->
+<!-- Blog posts -->
 <section class="section">
   <div class="container">
     <div class="row">
@@ -154,7 +154,7 @@ description: >
     {% include templates/pagination.html %}
   </div>
 </section>
-<!-- /blog post -->
+<!-- /Blog posts -->
 
 {% include tenplates/instagram.html %}
 
