Added portfolio panel. Adjusted sass sources|site config

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ description: >
 <!-- Master header -->
 {% include templates/masthead.html %}
 
+<!-- Portfolio -->
+{% include templates/portfolio.html %}
+
 {% if site.layout_home_page == true %}
 
 <!-- Featured posts -->
