Changed site logo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout:                                 default
-title:                                  Welcome
-tagline:                                Jhon Abraham Blog
+title:                                  Jhon Abraham
+tagline:                                Welcome
 description: >
-                                        I’m a Freelance Interactive Art Director based in France.
+                                        I’m Jhon Abraham, a Freelance Interactive Art Director based in France.
                                         Focusing across branding and identity, digital and print.
 ---
 
