--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ description: >
 <!-- Featured posts -->
 {% if site.featured-post-slider == true %}
 
-<section id="featured-posts" class="section-sm">
+<section id="featured-posts" class="section pt-5">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -69,7 +69,7 @@ description: >
 <!-- /Featured posts -->
 
 <!-- All posts -->
-<section id="all-posts" class="section-sm mt-5">
+<section id="all-posts" class="section pt-5">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
