Latest files of version 2023.0.0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout:                                 default
 title:                                  Jhon Abraham
 tagline:                                Welcome
 description: >
-                                        I’m Jhon Abraham, a Freelance Interactive Art Director based in France.
+                                        I’m Jhon Abraham, a Freelance Art Director based in France.
                                         Focusing across branding and identity, digital and print.
 ---
 
